--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 }
 
 a{
@@ -25,6 +25,8 @@ ul,li{
     text-transform: capitalize !important;
 }
 
+
+/* header  */
 .header {
     background-color: #ff3b66;
     background-image: linear-gradient(147deg, #ff3b66 0%, #ff258a 74%);
@@ -33,6 +35,7 @@ ul,li{
 .brand--link{
     text-transform: uppercase;
     color: #fff;
+    font-size: 2.8rem;
 }
 
 .topnav {
@@ -75,15 +78,17 @@ ul,li{
 }
 
 .header__main--slogan h2 {
-    font-size: 5rem;
+    font-size: 6rem;
     color: #fff;
     margin-bottom: 15px;
 }
 
 .header__main--slogan p {
     color: #fff;
-    font-size: 2rem;
+    font-size: 2.6rem;
     margin-bottom: 15px;
+    line-height: 1.5;
+    text-align: justify;
 
 }
 
@@ -104,9 +109,11 @@ ul,li{
 .header__main--img {
     float: left;
     position: absolute;
-    top: 15px;
+    top: 0;
     right: 0;
 }
+
+
 
 
 @media (min-width:740px) {
@@ -124,17 +131,16 @@ ul,li{
     .header__main--slogan{
         padding-right: 10px;
         padding-left: 10px;
-        text-align: justify;
     }
 }
 
 @media (min-width:1024px) {
     .header {
-        height: 700px;
+        height: 730px;
     }
 }
 
-@media (max-width:1024px) {
+@media (max-width:1023px) {
     .only-pc{
         display: none;
     }
