--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root {
     font-size: 10px;
     --btn-color: #fefe00;
+    --btn-color-hover: #fefe00c2;
+    --body-color: #969696
 }
 
 *{
@@ -11,6 +15,7 @@
 
 body {
     font-size: 1.8rem;
+    font-family: 'Poppins', sans-serif;
 }
 
 a{
@@ -21,13 +26,15 @@ ul,li{
     list-style-type: none;
 }
 
+
 .text-capitalize{
     text-transform: capitalize !important;
 }
 
 
 /* header  */
-.header {
+.header,
+.footer__ads {
     background-color: #ff3b66;
     background-image: linear-gradient(147deg, #ff3b66 0%, #ff258a 74%);
 }
@@ -56,6 +63,13 @@ ul,li{
     padding: 8px 0 8px 16px;
     color: #fff;
 }
+
+.topnav__nav li a:hover,
+.topnav__user--login:hover,
+.topnav__user--openmenu:hover {
+    color: #d1d1d1; 
+}
+
 
 .topnav__user--signup
 {
@@ -92,7 +106,8 @@ ul,li{
 
 }
 
-.header__main--slogan a {
+.slogan__btn a,
+.footer__ads--btn {
     display: inline-block;
     font-size: 2rem;
     color: #000;
@@ -102,8 +117,18 @@ ul,li{
     border-radius: 5px;
 }
 
+.slogan__btn a:hover,
+.footer__ads--btn:hover,
+.topnav__user--signup:hover {
+    background-color: var(--btn-color-hover);
+}
+
 .slogan__btn a:nth-child(2) {
     background-color: #fff;
+}
+
+.slogan__btn a:nth-child(2):hover {
+    background-color: #d3d3d3;
 }
 
 .header__main--img {
@@ -113,8 +138,148 @@ ul,li{
     right: 0;
 }
 
+/* main  */
+
+.main {
+    text-align: center;
+}
+
+.main h2 {
+    font-size: 3.6rem;
+    font-weight: 600;
+    margin: 15px;
+}
+
+.main p {
+    color: var(--body-color);
+    line-height: 1.5;
+}
+
+.desc {
+    padding: 110px;
+}
+
+.main img{
+    width: 100%;
+ }
 
 
+ .topics,
+ .mentors {
+    background-color: #f7f7f7;
+    padding: 15px 0;
+ }
+
+ .topics__slider,
+ .mentors__slider {
+    padding-top: 30px;
+ }
+
+ .slider__wrap,
+ .slider__item{
+    position: relative;
+ }
+
+ .slider__item p {
+    position: absolute;
+    bottom: 10%;
+    left: 0;
+    right: 0;
+    text-align: center;
+    font-size: 2.8rem;
+    color: #fff;
+ }
+
+ .slider--next,
+ .slider--pre {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+ }
+ 
+
+ .slider--next {
+    right: 0;
+ }
+
+ .slider--pre {
+    left: 0;
+ }
+
+ .slider--pre i{
+    transform: rotate(180deg);
+ }
+
+ .slider--next i,
+ .slider--pre i {
+    color: #ff3b66;
+ }
+
+ .slider--next:hover i,
+ .slider--pre:hover i{
+    font-size: 2.6rem;
+ }
+
+ .footer__slider {
+    height: 450px;
+    background:linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(9, 9, 9, 0.2)), url('../image/Rectangle\ 5.png') no-repeat center / cover;
+    text-align: center;
+ }
+
+ .footer__slider .slider__wrap{
+    height: 450px;
+ }
+
+ .footer__slider--content {
+    width: 60%;
+    margin: auto;
+    color: #fff;
+ }
+
+ .footer__slider--content h2 {
+    padding: 50px 0;
+ }
+
+ .footer__slider--content p {
+    line-height: 1.5;
+    padding-bottom: 50px;
+ }
+
+ .footer__slider--rating i {
+    color: var(--btn-color);
+ }
+
+ .footer .topnav a{
+    color: #000;
+ }
+
+ .footer__ads{
+    padding: 50px;
+ }
+
+ .footer__ads h2 {
+    font-size: 3.6rem;
+    color: #fff;
+ }
+
+.footer__btn__wrap {
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+.footernav a {
+    color: #000;
+}
 
 @media (min-width:740px) {
     .topnav__user .row{
@@ -132,17 +297,51 @@ ul,li{
         padding-right: 10px;
         padding-left: 10px;
     }
+
+    .header__main--slogan h2 {
+        font-size: 3.8rem;
+    }
+
+    .slogan__btn a:first-child{
+        margin-bottom: 15px;
+    }
+
+    .footer .topnav__nav {
+        justify-content: space-evenly;
+    }
+
+    .desc {
+        padding: 0 8px;
+    }
+
+    .footer__slider,
+    .footer__slider .slider__wrap {
+        height: auto;
+        padding-bottom: 25px;
+    }
+
+    .footer__ads {
+        padding: 20px 8px;
+    }
 }
 
 @media (min-width:1024px) {
     .header {
         height: 730px;
     }
+
+    .desc__wrap{
+        width: 1000px;
+        margin: auto;
+    }
 }
 
 @media (max-width:1023px) {
     .only-pc{
-        display: none;
+        display: none !important;
+    }
+    .footer__ads--btn{
+        margin-top: 25px;
     }
 }
 
