--- a/react/fpt/src/layout/asset/css/base.css
+++ b/react/fpt/src/layout/asset/css/base.css
@@ -36,18 +36,18 @@ li {
 
 /* hover dropdown menu  */
 .hover-dropdown{
-  position: relative;
   height: 100%;
 }
 
 .hover-dropdown:hover .dropdown-content {
   display: block;
-  position: absolute;
   background-color: var(--white);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  z-index: 1;
 }
 
 
 .dropdown-content {
   display: none;
+  position: absolute;
 }
