--- a/react/fpt/src/layout/asset/css/header.css
+++ b/react/fpt/src/layout/asset/css/header.css
@@ -7,11 +7,21 @@
   height: 56px;
 }
 
+.top-nav-logo,
+.mobile-menu-btn {
+  height: 56px;
+}
 .top-nav-logo {
-  width: 154px;
-  height: 100%;
+  width: 157px;
   background: url('../img/iconhd.png') no-repeat;
   background-position: top 0 left 0;
+}
+
+.mobile-menu-btn {
+  color: var(--white);
+  font-size: 2.8rem;
+  padding:0 5px;
+  margin-right: 5px;
 }
 
 .top-nav-logo a{
@@ -21,10 +31,12 @@
 }
 
 .top-nav-search {
+  padding: 8px 0;
   width: 100%;
 }
 
 .top-nav-search button {
+  cursor: pointer;
   font-size: 2rem;
   color: var(--white);
   padding: 7px 19px;
@@ -33,16 +45,12 @@
   background-color: var(--black-700);
 }
 
-
 .top-nav-search input {
-  display: block;
   border: none;
   outline: none;
   width: calc(100% - 58px);
   padding-left: 8px;
 }
-
-
 
 .top-nav-link-wrap {
   height: 100%;
@@ -64,6 +72,7 @@
 
 .top-nav-link-wrap .dropdown-content {
   padding: 8px 0;
+  z-index: 2;
 }
 
 .top-nav-link-wrap .dropdown-content a {
@@ -73,17 +82,30 @@
   color: var(--gray)
 }
 
-.top-nav-search-input {
-  width: calc(100% - 58px);
+.top-nav-link-wrap .dropdown-content a:hover {
+  color: var(--black);
 }
+
+.top-nav-link-mb {
+  height: 56px;
+  color: var(--white);
+}
+
+.top-nav-link-mb .shop-cart {
+  padding: 0 15px;
+  font-size: 2rem;
+}
+
+
 
 .main-nav {
   background-color: var(--black-700);
   height: 36px;
 }
 
-.main-nav-link-wrap {}
-
+.main-nav div.hover-dropdown:hover{
+  position: unset;
+}
 .main-nav-link-wrap>a{
   color: var(--white);
   text-transform: uppercase;
