--- a/react/fpt/src/layout/index.html
+++ b/react/fpt/src/layout/index.html
@@ -138,16 +138,16 @@
                 <li><a href="#">mot cai gi do</a></li>
               </ul>
           </div>
-          <div class="hover-dropdown main-nav-link-wrap">
+          <div class="main-nav-link-wrap">
               <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-rotate-right"></i> Máy cũ giá rẻ</a>
           </div>
-          <div class="hover-dropdown main-nav-link-wrap">
+          <div class="main-nav-link-wrap">
               <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-house-flag"></i> Hàng gia dụng</a>
           </div>
-          <div class="hover-dropdown main-nav-link-wrap">
+          <div class="main-nav-link-wrap">
               <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-sim-card"></i> Sim thẻ</a>
           </div>
-          <div class="hover-dropdown main-nav-link-wrap">
+          <div class="main-nav-link-wrap">
               <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-shield-virus"></i> Khuyến mãi</a>
           </div>
         </div>
@@ -155,6 +155,28 @@
     </div>
     <!-- end main nav  -->
 
+    <!-- nav in mobile  -->
+    <div class="mobile-blur">
+      <div class="mobile-nav only-mobile">
+        <div class="mobile-sidebar-header flex js-between">
+          <div class="mobile-logo">
+          </div>
+          <i class="fa-solid fa-xmark"></i>
+        </div>
+
+        <!-- mobile-user  -->
+        <div class="mobile-user">
+          <a  href="#">
+            <i class="fa-solid fa-circle-user"></i>
+            <span>Tài khoản của tôi</span>
+          </a>
+        </div>
+        <!-- end mobile-user  -->
+
+        
+      </div>
+    </div>
+    <!-- nav in mobile  -->
   </div>
   <!-- end header  -->
 
