--- a/react/fpt/src/layout/asset/css/index.css
+++ b/react/fpt/src/layout/asset/css/index.css
@@ -1,4 +1,4 @@
-.breadcrumb {
+/* .breadcrumb {
   padding: 8px 0px;
 }
 
@@ -57,4 +57,4 @@
 
 .breadcrumb .active a::after{
   content: '';
-}
+} */
