--- a/react/fpt/src/layout/index.html
+++ b/react/fpt/src/layout/index.html
@@ -56,12 +56,23 @@
                 <li><a href="#">Tin mới</a></li>
               </ul>
             </div>
-            <div>
+            <div class="hover-dropdown">
+              <a class="top-nav-link" href="#">
+                <p><i class="fa-solid fa-file-lines"></i></p>
+                <p>Thông tin hay</p>
+              </a>
+              <ul class="dropdown-content">
+                <li><a href="#">Tin mới</a></li>
+                <li><a href="#">Tin mới</a></li>
+                <li><a href="#">Tin mới</a></li>
+              </ul>
+            </div>
+            <!-- <div>
               <a class="top-nav-link" href="#">
                 <p><i class="fa-solid fa-file-invoice-dollar"></i></p>
                 <p>Thanh toán & tiện ích</p>
               </a>
-            </div>
+            </div> -->
             <div>
               <a class="top-nav-link" href="#">
                 <p><i class="fa-solid fa-circle-user"></i></p>
@@ -107,48 +118,51 @@
     <!-- main nav PC -->
     <div class="main-nav flex js-center only-pc">
       <div class="width ">
-        <div class="relative flex js-between ali-center">
-          <div class="hover-dropdown main-nav-link-wrap">
-              <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-mobile"></i> Điện thoại</a>
-              <div class="dropdown-content width">
-                <h1>Mot cai gi do</h1>
-              </div>
-          </div>
-          <div class="hover-dropdown main-nav-link-wrap">
-              <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-laptop"></i> Lap top</a>
-              <div class="dropdown-content width">
-                <h1>Mot cai gi do</h1>
-              </div>
-          </div>
-          <div class="hover-dropdown main-nav-link-wrap">
-              <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-mobile"></i> Máy tính bảng</a>
-              <div class="dropdown-content width">
-                <h1>Mot cai gi do</h1>
-              </div>
-          </div>
-          <div class="hover-dropdown main-nav-link-wrap">
-              <a href="#" class="main-nav-link h-100"><i class="fa-brands fa-apple"></i> Apple</a>
-              <div class="dropdown-content width" >
-                <h1>Mot cai gi do</h1>
-              </div>
-          </div>
-          <div class="hover-dropdown main-nav-link-wrap">
-              <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-desktop"></i> Pc - linh kiện</a>
-              <ul class="dropdown-content">
-                <li><a href="#">mot cai gi do</a></li>
-              </ul>
-          </div>
-          <div class="main-nav-link-wrap">
-              <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-rotate-right"></i> Máy cũ giá rẻ</a>
-          </div>
-          <div class="main-nav-link-wrap">
-              <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-house-flag"></i> Hàng gia dụng</a>
-          </div>
-          <div class="main-nav-link-wrap">
-              <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-sim-card"></i> Sim thẻ</a>
-          </div>
-          <div class="main-nav-link-wrap">
-              <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-shield-virus"></i> Khuyến mãi</a>
+        <div class="relative">
+
+          <div class="flex js-between ali-center">
+            <div class="hover-dropdown main-nav-link-wrap">
+                <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-mobile"></i> Điện thoại</a>
+                <div class="dropdown-content width">
+                  <h1>Mot cai gi do</h1>
+                </div>
+            </div>
+            <div class="hover-dropdown main-nav-link-wrap">
+                <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-laptop"></i> Lap top</a>
+                <div class="dropdown-content width">
+                  <h1>Mot cai gi do</h1>
+                </div>
+            </div>
+            <div class="hover-dropdown main-nav-link-wrap">
+                <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-mobile"></i> Máy tính bảng</a>
+                <div class="dropdown-content width">
+                  <h1>Mot cai gi do</h1>
+                </div>
+            </div>
+            <div class="hover-dropdown main-nav-link-wrap">
+                <a href="#" class="main-nav-link h-100"><i class="fa-brands fa-apple"></i> Apple</a>
+                <div class="dropdown-content width" >
+                  <h1>Mot cai gi do</h1>
+                </div>
+            </div>
+            <div class="hover-dropdown main-nav-link-wrap">
+                <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-desktop"></i> Pc - linh kiện</a>
+                <div class="dropdown-content ">
+                  <li><a href="#">mot cai gi do</a></li>
+                </div>
+            </div>
+            <div class="main-nav-link-wrap">
+                <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-rotate-right"></i> Máy cũ giá rẻ</a>
+            </div>
+            <div class="main-nav-link-wrap">
+                <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-house-flag"></i> Hàng gia dụng</a>
+            </div>
+            <div class="main-nav-link-wrap">
+                <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-sim-card"></i> Sim thẻ</a>
+            </div>
+            <div class="main-nav-link-wrap">
+                <a href="#" class="main-nav-link h-100"><i class="fa-solid fa-shield-virus"></i> Khuyến mãi</a>
+            </div>
           </div>
         </div>
       </div>
